trunk/Archive2/d0/9df6f78ba8863c/output
main.cpp: In function 'int main()':
main.cpp:6:12: error: expected primary-expression before ';' token
     char s=;
            ^
main.cpp:8:28: error: invalid conversion from 'char' to 'char*' [-fpermissive]
     std::sprintf(s,"%d" ,cc);
                            ^
